spacing more fixed, nav bar more complete

--- a/layout.css
+++ b/layout.css
@@ -1,13 +1,11 @@
 * {
   padding: 0;
   margin: 0;
-  page-break-before: always;
   border:0 solid transparent
 
 }
 
 body {
-  page-break-before: always;
   background-color:    rgba(82, 78, 78, 0.522);
 }
 header {
@@ -15,8 +13,10 @@ header {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
-    /*(page-break-after: always;*/
+    width: 100%;
+    height: 100vh;
 }
+
 /* navigation bar */
 
 nav {
@@ -37,8 +37,8 @@ ul li {
 }
 /*anchor*/
 ul li a {
-  border-color: black;
-  border-width: 1px;
+  /*border-color: black;
+  border-width: 1px;*/
   text-decoration: none;
   font-size: 14px;
   font-family: arial;
@@ -50,3 +50,23 @@ ul li a:hover {
   color: red;
 }
 /* navigation bar */
+
+.Jobs{
+  height: 20vh;
+}
+
+.About{
+  height:20vh;
+}
+
+.Interests {
+  height:20vh;
+}
+
+.Skills {
+  height: 20vh;
+}
+
+footer {
+  height: 10vh;
+}
